# ainex_devops

./: .colcon_ignore  .gitignore  Dockerfile  README.md  README_t5.md  README_t6.md  README_t7.md  build_all.sh  check_deps.py  compose.yml  entrypoint.sh  frames_2025-12-04_18.52.15.gv  requirements.txt  setup.sh
ainex_motion/: setup.py
ainex_motion/ainex_motion/: joint_visualization_node.py
ainex_vision/ainex_vision/: camera_sub.py
groupE_venv/: pyvenv.cfg
rl_grasp/envs/: grasp_env_ainex.py  grasp_env_franka.py  grasp_env_mujoco.py
rl_grasp/scripts/: _robots.py  eval_ppo.py  gui_inspect.py  smoke_test.py  train_ppo.py
rl_grasp/urdf/: ainex_mujoco.urdf  ainex_mujoco.xml  grasp_scene.xml
rl_grasp_gazebo/: README.md
rl_grasp_gazebo/envs/: grasp_env_gz.py
rl_grasp_gazebo/launch/: spawn.launch.py
rl_grasp_gazebo/scripts/: full_diagnosis.py  manual_test.py  replay_pybullet_policy.py
rl_grasp_gazebo/urdf/: ainex_gz.urdf.xacro  gazebo_harmonic.xacro
rl_grasp_gazebo/worlds/: grasp.sdf
src/ainex/ainex_controller/: setup.py
src/ainex/ainex_controller/ainex_controller/: __init__.py  ainex_hand_controller.py  ainex_model.py  ainex_robot.py  ainex_walk_to_aruco_node.py  monitor_real_robot.py
src/ainex/ainex_description/launch/: display.launch.py
src/ainex/ainex_description/rviz/: ainex.rviz
src/ainex/ainex_motion/: setup.py
src/ainex/ainex_motion/ainex_motion/: joint_visualization_node.py
src/ainex/ainex_vision/: CMakeLists.txt  setup.py
src/ainex/ainex_vision/ainex_vision/: aruco_detection_node.py  aruco_tf_broadcaster.py  camera_sub.py  camera_sub_backup.py  face_detection_node.py
src/ainex/servo_service/: CMakeLists.txt
src/ainex/servo_service/msg/: GraspFeedback.msg  InstructionAfterLLM.msg  VisionTarget.msg
src/ainex_controller/: setup.py
src/ainex_controller/ainex_controller/: ainex_hands_control_node.py  ainex_model.py  ainex_robot.py  ainex_walk_to_aruco_node.py  spline_trajectory.py
src/ainex_description/: CMakeLists.txt
src/ainex_description/launch/: display.launch.py
src/ainex_motion/: setup.py
src/ainex_motion/ainex_motion/: joint_controller.py  joint_visualization_node.py
src/ainex_vision/: CMakeLists.txt  package.xml  setup.py
src/ainex_vision/ainex_vision/: aruco_detection_node.py  aruco_tf_broadcaster.py  face_detection_node.py
src/ainex_vision/msg/: FaceBoundingBox.msg  FaceBoundingBoxArray.msg
src/auth_msgs/: CMakeLists.txt
src/auth_msgs/msg/: AuthState.msg
src/bringup/: package.xml  setup.py
src/bringup/launch/: bringup.launch.py
src/face_search_and_wave/: package.xml  setup.py
src/face_search_and_wave/face_search_and_wave/: face_and_wave.py
src/face_search_and_wave/msg/: FaceDetected.msg
src/llm/: CMakeLists.txt.disabled  package.xml.disabled
src/llm/auth_msgs/: CMakeLists.txt  package.xml
src/llm/llm_interface/: package.xml  setup.py
src/llm/llm_interface/llm_interface/: llm_server_node.py  openai_client.py
src/llm/llm_interface/llm_interface/prompts/: system_prompt.txt
src/llm/llm_msgs/: CMakeLists.txt
src/llm/speech_interface/: package.xml  setup.py
src/llm/speech_interface/speech_interface/: asr_node.py  tts_node.py
src/llm_interface/: setup.py
src/llm_interface/launch/: llm_with_auth.launch.py
src/llm_interface/llm_interface/: llm_cli_node.py  llm_server_node.py  openai_client.py
src/llm_interface/llm_interface/prompts/: system_prompt.txt
src/llm_msgs/: CMakeLists.txt  package.xml
src/llm_msgs/srv/: Chat.srv
src/log/: latest_list
src/speech_interface/: package.xml  setup.cfg  setup.py
src/speech_interface/speech_interface/: asr_node.py  speech_to_text_node.py  text_to_speech_node.py  tts_node.py
src/teleop/: CMakeLists.txt  README_teleop.md  package.xml  setup.py
src/teleop/command_service/: CMakeLists.txt  package.xml
src/teleop/launch/: grasp.launch.py  main_control.launch.py
src/teleop/teleop/: crouch.py  degrasp.py  grasp.py  hands_control.py  main_control.py  teleop.py  turn_around.py  walk_to_Aruco.py  wave.py
src/vision/: CMakeLists.txt  CMakeLists.txt.BAK  package.xml.BAK
src/vision/face_search_and_wave/: setup.cfg
src/vision/face_search_and_wave/face_search_and_wave/: wave_semah.py
src/vision/vision/: README.md  README_vision.md  package.xml  setup.py
src/vision/vision/config/: camera_calibration.yaml  object_pose_estimator_params.yaml
src/vision/vision/launch/: detector.launch.py  marker_detection.launch.py  object_detection.launch.py
src/vision/vision/vision/: aruco_detector_node.py  capture_node.py  object_detector.py  target_object_detector_node.py  tf_debug_publisher_node.py  undistortion.py
src/vision/vision_interfaces/: CMakeLists.txt  package.xml
src/vision/vision_interfaces/msg/: DetectedObject.msg  MarkerInfo.msg  MarkerInfoArray.msg
src/vision_part/vision/: README.md  READMEvision.md  package.xml  setup.py
src/vision_part/vision/config/: camera_calibration.yaml
src/vision_part/vision/launch/: marker_detection.launch.py  object_detection.launch.py  object_pose_estimation.launch.py
src/vision_part/vision/vision/: aruco_detector_node.py  object_detector.py  object_detector_node.py  target_object_detector_node.py  tf_debug_publisher_node.py  undistortion.py
src/vision_part/vision_interfaces/: CMakeLists.txt
src/vision_part/vision_interfaces/msg/: MarkerInfo.msg  MarkerInfoArray.msg
