<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vision</name>
  <version>0.0.0</version>
  <description>Vision package for robot system</description>

  <maintainer email="nivilian007@gmail.com">hrs2025</maintainer>
  <license>Apache License 2.0</license>

  <!-- Python package -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- runtime deps -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>message_filters</depend>
  <depend>cv_bridge</depend>

  <!-- custom msgs live in a separate package -->
  <depend>vision_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <!-- IMPORTANT: this makes it a ROS2 Python package -->
    <build_type>ament_python</build_type>
  </export>
</package>
